# Document-Scanner

./: .dockerignore  Dockerfile  README.md  api.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
assesmenttest/: api.py  main.py
assesmenttest/utils/: orientation.py  page_score.py  quad_detect.py  vis_debug.py  warp_and_pad.py
tests/: conftest.py  test_api_smoke.py  test_cli_smoke.py
ui/: Dockerfile  app.py
ui/templates/: index.html
utils/: edge_detect.py  io_utils.py  orientation.py  page_score.py  preprocess.py  quad_detect.py  retry_policy.py  warp_and_pad.py
